--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">R</div>
+        <div class="logo"><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhz5BaklTv6jA7RjwC_KClDP7Lmoth_uCYweEMPYTXB9E4L8KHbvDMKOa6VE2pNYyWScmQSe1neZocxmGFp1hPZJ2iApq3qxXG0v7drlDmZpzR5Euot41B4OSLiSqeJrVBfM333dV1X3So7Q6_xaCU2jAeJyjfHqH0EDUD4U4pt_x3QVtcLwSw0NRa7pcbg/s1280/WhatsApp%20Image%202025-10-22%20at%2010.56.20%20PM.jpeg" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="1280" data-original-width="1141" height="400" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhz5BaklTv6jA7RjwC_KClDP7Lmoth_uCYweEMPYTXB9E4L8KHbvDMKOa6VE2pNYyWScmQSe1neZocxmGFp1hPZJ2iApq3qxXG0v7drlDmZpzR5Euot41B4OSLiSqeJrVBfM333dV1X3So7Q6_xaCU2jAeJyjfHqH0EDUD4U4pt_x3QVtcLwSw0NRa7pcbg/w356-h400/WhatsApp%20Image%202025-10-22%20at%2010.56.20%20PM.jpeg" width="356" /></a></div><br /></div>
         <div>
           <div style="font-weight:700">RewardSpot</div>
           <div style="font-size:13px;color:var(--muted)">Free rewards, gift cards & hot offers</div>
@@ -208,3 +208,4 @@
   </script>
 </body>
 </html>
+
