--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     function handleGetRewards(){
       const email = prompt("Enter your email to get started:");
       if(email){
-        alert('Thanks! We sent offers to ' + email + ' (demo).');
+        alert('Thanks! We sent offers to ' + email + 'https://otieu.com/4/9293042');
         window.open(offers[0].link, '_blank');
       }
     }
@@ -193,7 +193,7 @@
       e.preventDefault();
       const email = document.getElementById('email').value.trim();
       if(!email) return alert('Please enter a valid email');
-      alert('Thanks! We sent offers to ' + email + ' (demo).');
+      alert('Thanks! We sent offers to ' + email + 'https://otieu.com/4/9293042');
       document.getElementById('email').value='';
       window.open(offers[0].link, '_blank');
       return false;
@@ -205,3 +205,4 @@
   </script>
 </body>
 </html>
+
