--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8"></meta>
+  <meta content="width=device-width, initial-scale=1" name="viewport"></meta>
   <title>RewardSpot – Claim Free Rewards, Gift Cards & Hot Deals!</title>
-  <meta name="description" content="Join RewardSpot and unlock daily offers, free rewards, and exclusive deals. Complete simple tasks and earn instantly!"/>
-  <meta name="keywords" content="rewards, gift cards, free offers, prizes, sweepstakes, earn"/>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23007bff' width='100' height='100' rx='20'/><text x='50' y='57' font-size='45' text-anchor='middle' fill='white' font-family='Arial'>R</text></svg>">
+  <meta content="Join RewardSpot and unlock daily offers, free rewards, and exclusive deals. Complete simple tasks and earn instantly!" name="description"></meta>
+  <meta content="rewards, gift cards, free offers, prizes, sweepstakes, earn" name="keywords"></meta>
+  <link href="data:image/svg+xml,&lt;svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'&gt;&lt;rect fill='%23007bff' width='100' height='100' rx='20'/&gt;&lt;text x='50' y='57' font-size='45' text-anchor='middle' fill='white' font-family='Arial'&gt;R&lt;/text&gt;&lt;/svg&gt;" rel="icon"></link>
   <style>
     :root{ --bg:#f6f8fb; --card:#ffffff; --accent:#0b74ff; --muted:#6b7280; --success:#10b981 }
     *{box-sizing:border-box}
@@ -16,7 +16,17 @@
     /* Header */
     header{display:flex; align-items:center; justify-content:space-between; gap:16px}
     .brand{display:flex; align-items:center; gap:12px}
-    .logo{width:48px; height:48px; border-radius:10px; background:linear-gradient(135deg,#0b74ff,#00c2ff); display:flex; align-items:center; justify-content:center; color:#fff; font-weight:700}
+    .logo{
+      width:48px;
+      height:48px;
+      border-radius:10px;
+      background-image: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhz5BaklTv6jA7RjwC_KClDP7Lmoth_uCYweEMPYTXB9E4L8KHbvDMKOa6VE2pNYyWScmQSe1neZocxmGFp1hPZJ2iApq3qxXG0v7drlDmZpzR5Euot41B4OSLiSqeJrVBfM333dV1X3So7Q6_xaCU2jAeJyjfHqH0EDUD4U4pt_x3QVtcLwSw0NRa7pcbg/s1280/WhatsApp%20Image%202025-10-22%20at%2010.56.20%20PM.jpeg');
+      background-size: cover;
+      background-position: center;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
     .nav{display:flex; gap:12px; align-items:center}
     .nav a{color:var(--muted); text-decoration:none; font-size:14px}
     .cta-small{background:var(--accent); color:#fff; padding:10px 14px; border-radius:8px; text-decoration:none; font-weight:600}
@@ -41,6 +51,7 @@
     .offer{background:var(--card); border-radius:12px; padding:14px; box-shadow:0 8px 20px rgba(2,6,23,0.04); display:flex; flex-direction:column; gap:8px}
     .offer h3{margin:0; font-size:16px}
     .offer p{margin:0; color:var(--muted); font-size:13px}
+    .offer img{width:100%; height:130px; object-fit:cover; border-radius:12px} 
     .offer .btn{margin-top:auto; background:var(--accent); color:#fff; padding:10px; border-radius:8px; text-align:center; text-decoration:none}
 
     /* Trust & footer */
@@ -68,10 +79,10 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">R</div>
+        <div class="logo"></div>
         <div>
-          <div style="font-weight:700">RewardSpot</div>
-          <div style="font-size:13px;color:var(--muted)">Free rewards, gift cards & hot offers</div>
+          <div style="font-weight: 700;">RewardSpot</div>
+          <div style="color: var(--muted); font-size: 13px;">Free rewards, gift cards &amp; hot offers</div>
         </div>
       </div>
       <nav class="nav">
@@ -85,67 +96,66 @@
     <main>
       <section class="hero">
         <div>
-          <h1>Claim Free Rewards & Gift Cards — Fast</h1>
+          <h1>Claim Free Rewards &amp; Gift Cards — Fast</h1>
           <div class="headline-sub">Complete simple offers, surveys, or app installs and instantly unlock rewards. Trusted by thousands of US members.</div>
 
           <div class="features">
             <div class="feature"><div class="dot"></div><div><strong>Daily Offers</strong><div class="small-muted">New offers every day</div></div></div>
-            <div class="feature"><div class="dot"></div><div><strong>Instant Payouts</strong><div class="small-muted">Gift cards & cashouts</div></div></div>
+            <div class="feature"><div class="dot"></div><div><strong>Instant Payouts</strong><div class="small-muted">Gift cards &amp; cashouts</div></div></div>
             <div class="feature"><div class="dot"></div><div><strong>Secure</strong><div class="small-muted">We protect your privacy</div></div></div>
           </div>
 
-          <div class="trust" style="margin-top:20px">
+          <div class="trust" style="margin-top: 20px;">
             <div>⭐ 4.7/5 - 12,345 reviews</div>
-            <div>🔒 Secure & Private</div>
+            <div>🔒 Secure &amp; Private</div>
             <div>🚀 Fast Payouts</div>
           </div>
 
-          <div id="how" style="margin-top:20px">
-            <h3 style="margin-bottom:8px">How it works</h3>
-            <ol style="color:var(--muted); padding-left:18px">
-              <li>Sign up (free)</li>
+          <div id="how" style="margin-top: 20px;">
+            <h3 style="margin-bottom: 8px;">How it works</h3>
+            <ol style="color: var(--muted); padding-left: 18px;">
               <li>Complete offers or surveys</li>
+              <li>Submit your email</li>
               <li>Claim your reward</li>
             </ol>
           </div>
         </div>
 
         <aside class="cta-box" id="get">
-          <h3 style="margin:0 0 8px">Get your first reward</h3>
+          <h3 style="margin: 0 0 8px;">Get your first reward</h3>
           <p>Sign up with your email and we'll show offers available for you.</p>
 
-          <form id="leadForm" class="email-row" onsubmit="return handleForm(event)">
-            <input type="email" id="email" placeholder="Your email address" required />
+          <form class="email-row" id="leadForm" onsubmit="return handleForm(event)">
+            <input id="email" placeholder="Your email address" required="" type="email" />
             <button type="submit">Get Started</button>
           </form>
 
-          <p class="small-muted" style="margin-top:10px">By joining you agree to our Terms & Privacy. All offers are optional.</p>
+          <p class="small-muted" style="margin-top: 10px;">By joining you agree to our Terms &amp; Privacy. All offers are optional.</p>
         </aside>
       </section>
 
-      <section style="margin-top:26px">
-        <div style="display:flex; justify-content:space-between; align-items:center">
-          <h2 id="offers" style="margin:0">Top Offers</h2>
-          <div style="color:var(--muted); font-size:13px">Updated: <strong id="date">--</strong></div>
+      <section style="margin-top: 26px;">
+        <div style="align-items: center; display: flex; justify-content: space-between;">
+          <h2 id="offers" style="margin: 0;">Top Offers</h2>
+          <div style="color: var(--muted); font-size: 13px;">Updated: <strong id="date">--</strong></div>
         </div>
 
         <div class="offers" id="offersGrid">
           <!-- Offers will be injected by JS -->
         </div>
-
       </section>
 
-      <section id="faq" style="margin-top:28px">
+      <section id="faq" style="margin-top: 28px;">
         <h3>FAQ</h3>
-        <details style="background:var(--card); padding:12px; border-radius:8px; margin-top:8px"><summary>Is RewardSpot free?</summary><p class="small-muted">Yes — joining is free. Some offers may ask for purchase; always read offer details.</p></details>
-        <details style="background:var(--card); padding:12px; border-radius:8px; margin-top:8px"><summary>How do I get paid?</summary><p class="small-muted">Many offers pay via gift cards or cashouts once you complete the required steps.</p></details>
+        <details style="background: var(--card); border-radius: 8px; margin-top: 8px; padding: 12px;"><summary>Is RewardSpot free?</summary><p class="small-muted">Yes — joining is free. Some offers may ask for purchase; always read offer details.</p></details>
+        <details style="background: var(--card); border-radius: 8px; margin-top: 8px; padding: 12px;"><summary>How do I get paid?</summary><p class="small-muted">Many offers pay via gift cards or cashouts once you complete the required steps.</p></details>
       </section>
 
     </main>
 
     <footer>
       <div>© <strong>RewardSpot</strong> — Your place for free rewards</div>
-      <div style="text-align:right">Designed for US users • <a href="#" style="color:var(--muted); text-decoration:none">Privacy</a> • <a href="#" style="color:var(--muted); text-decoration:none">Terms</a></div>
+      <div style="text-align: right;">Designed for US users • <a href="#" style="color: var(--muted); text-decoration: none;">Privacy</a> • <a href="#" style="color: var(--muted); text-decoration: none;">Terms</a></div>
     </footer>
   </div>
 
@@ -154,28 +164,36 @@
     <div class="modal">
       <h2 id="modalTitle">Offer Title</h2>
       <p id="modalDesc">Offer description</p>
-      <div style="display:flex; gap:8px; margin-top:12px; justify-content:flex-end">
+      <div style="display: flex; gap: 8px; justify-content: flex-end; margin-top: 12px;">
         <button class="close-btn" onclick="closeModal()">Close</button>
-        <a id="modalAction" class="close-btn" style="background:var(--accent); color:#fff; text-decoration:none;">Start Offer</a>
+        <a class="close-btn" id="modalAction" style="background: var(--accent); color: white; text-decoration: none;">Start Offer</a>
       </div>
     </div>
   </div>
 
   <script>
-    // Basic demo offers (replace with your real offers/data)
+    // Offers with separate banner and unique links
     const offers = [
-      {id:1, title:'$5 Amazon Gift Card', desc:'Complete a short survey to claim a $5 Amazon e-gift card.', reward:'$5', cta:'Claim Now'},
-      {id:2, title:'Free App Install - Get 100 Coins', desc:'Install and open the partner app to earn 100 coins redeemable for rewards.', reward:'In-app', cta:'Install App'},
-      {id:3, title:'$10 Walmart Card', desc:'Try a free trial and get a $10 Walmart gift card after verification.', reward:'$10', cta:'Get $10'},
-      {id:4, title:'Spin & Win Sweepstakes', desc:'Enter the sweepstakes for a chance to win up to $100.', reward:'Sweepstakes', cta:'Enter Now'}
+      {id:1, title:'$5 Amazon Gift Card', desc:'Complete a short survey to claim a $5 Amazon e-gift card.', reward:'$5', cta:'Claim Now', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer1'},
+      {id:2, title:'Free App Install - Get 100 Coins', desc:'Install and open the partner app to earn 100 coins redeemable for rewards.', reward:'In-app', cta:'Install App', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer2'},
+      {id:3, title:'$10 Walmart Card', desc:'Try a free trial and get a $10 Walmart gift card after verification.', reward:'$10', cta:'Get $10', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer3'},
+      {id:4, title:'Spin & Win Sweepstakes', desc:'Enter the sweepstakes for a chance to win up to $100.', reward:'Sweepstakes', cta:'Enter Now', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer4'}
     ];
 
     function renderOffers(){
       const grid = document.getElementById('offersGrid');
       grid.innerHTML='';
       offers.forEach(o=>{
-        const el = document.createElement('div'); el.className='offer';
-        el.innerHTML = `<h3>${o.title}</h3><p>${o.desc}</p><div style='display:flex;gap:8px;align-items:center;'><div style='font-weight:700'>Reward: ${o.reward}</div><a class='btn' href='#' onclick='openOffer(${o.id});return false'>${o.cta}</a></div>`;
+        const el = document.createElement('div'); 
+        el.className='offer';
+        el.innerHTML = `
+          <img src="${o.img}" alt="${o.title}" />
+          <h3>${o.title}</h3>
+          <p>${o.desc}</p>
+          <div style='display:flex;gap:8px;align-items:center;'>
+            <div style='font-weight:700'>Reward: ${o.reward}</div>
+            <a class='btn' href='#' onclick='openOffer(${o.id});return false'>${o.cta}</a>
+          </div>`;
         grid.appendChild(el);
       })
     }
@@ -185,8 +203,12 @@
       document.getElementById('modalTitle').textContent = o.title;
       document.getElementById('modalDesc').textContent = o.desc + ' (Offer terms apply.)';
       const action = document.getElementById('modalAction');
-      action.href = '#';
-      action.onclick = function(e){ e.preventDefault(); alert('Redirecting to offer partner (demo).'); closeModal(); }
+      action.href = o.link;
+      action.onclick = function(e){ 
+        // Redirect demo
+        alert('Redirecting to: ' + o.link); 
+        closeModal(); 
+      }
       document.getElementById('modal').style.display = 'flex';
     }
     function closeModal(){ document.getElementById('modal').style.display = 'none'; }
@@ -195,8 +217,7 @@
       e.preventDefault();
       const email = document.getElementById('email').value.trim();
       if(!email) return alert('Please enter a valid email');
-      // Demo: show success then open modal
-      alert('Thanks! We sent offers to ' + email + ' (demo).');
+      alert('Thanks! We sent offers to ' + email + ' Click OK to view available rewards.');
       document.getElementById('email').value='';
       openOffer(1);
       return false;
