--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <script>
     // Offers with separate banner and unique links
     const offers = [
-      {id:1, title:'$5 Amazon Gift Card', desc:'Complete a short survey to claim a $5 Amazon e-gift card.', reward:'$5', cta:'Claim Now', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer1'},
+      {id:1, title:'RZUSA - Google Play $100 - Incent (US)', desc:'Sign up and receive $100 on Google Play!', reward:'$100', cta:'Claim Now', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiO-BaCLYgoCUhbOslptmAyl-QJdFpXulBFwDU6b4wkD0IRysbHFn3gyKE5P7g54xVoYopJPWmArP2AIYANUq1i4hV3HRLcmxxo8qyOLxAmUSUtPJ6yOWkSbs3tGnxuzDxDBdasbNqethb_C-ZUNBe18Sjv_FzelCoHJtJVNc5JALk-cqslQ4a4IgLXZuON/s650/4420.jpg', link:'https://www.af9m8trk.com/NP911LPH/WE112MD7/?s1=Shadhin'},
       {id:2, title:'Free App Install - Get 100 Coins', desc:'Install and open the partner app to earn 100 coins redeemable for rewards.', reward:'In-app', cta:'Install App', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer2'},
       {id:3, title:'$10 Walmart Card', desc:'Try a free trial and get a $10 Walmart gift card after verification.', reward:'$10', cta:'Get $10', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer3'},
       {id:4, title:'Spin & Win Sweepstakes', desc:'Enter the sweepstakes for a chance to win up to $100.', reward:'Sweepstakes', cta:'Enter Now', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwQ8fdkzokM-b7Z0ZrF5GRIDFxUavtUFQoQ3uZbiWEiyKKKhnB2e4nqF_UiKHv4l6KtBmuZHMECxwoQOxFUvau7S6fHoltq5Xe345e_ma1ylZx4HZd1BqJ6D7aU1F-sSWnN3BgeySJxVqhHnb0eholEY1bK9m1oKwYTV6avCEMcGdJsL7Fa_QgG1UG3lIc/s220/DEMO%20(1).png', link:'https://www.example.com/offer4'}
@@ -229,3 +229,4 @@
   </script>
 </body>
 </html>
+
