--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       width:48px;
       height:48px;
       border-radius:10px;
-      background-image: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhz5BaklTv6jA7RjwC_KClDP7Lmoth_uCYweEMPYTXB9E4L8KHbvDMKOa6VE2pNYyWScmQSe1neZocxmGFp1hPZJ2iApq3qxXG0v7drlDmZpzR5Euot41B4OSLiSqeJrVBfM333dV1X3So7Q6_xaCU2jAeJyjfHqH0EDUD4U4pt_x3QVtcLwSw0NRa7pcbg/s1280/WhatsApp%20Image%202025-10-22%20at%2010.56.20%20PM.jpeg');
+      background-image: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiyqT6GesCgX6Lek7ToQr4aMrtyA84Xo9qzsIxhbiqnTWOBk2OSa9ZKxjNQm9pSfyub2WOzXxpijo5S9F4-qCx_jkkzN15M55eMssewlAQQLVk6IpIApDiMLU00_bvwPZ_dw7PNSCBf8gucDbBtTkB6ESsDOIOmTMpG1L9D_paYo7JNGmDWWbKiuRoDp_Qj/s1024/Flux_Dev_Create_a_modern_sleek_logo_for_a_CPA_marketing_websit_1.jpg');
       background-size: cover;
       background-position: center;
       display:flex;
@@ -229,6 +229,7 @@
   </script>
 </body>
 </html>
+
 
 
 
