--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <script>
     // Offers with separate banner and unique links
     const offers = [
-      {id:1, title:'Google Play $100 - (US)', desc:'Sign up and receive $100 on Google Play!', reward:'$100', cta:'Claim Now', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjY2q_jgHPA6tYuTSNleOVeG59Tius0MzTObR0VqD7nd6LCDeUdVZaRTWZO2K0z8uCHok5DHV3JLV42fpGEQj67dKaZ6NZvkFC3uKsFkaWlP6iG4g3Sv6ofZ-TsPJEmha6R9cdWg27SswFx0EAtMAzt4476-owBrj2q-_UC_DUXVvZGfGItpHL7-Fvw4rj8/s650/4420.jpg', link:'https://www.af9m8trk.com/NP911LPH/WE112MD7/?s1=Shadhin'},
+      {id:1, title:'Walmart $1,000 - (US)', desc:'Get $1,000 to spend at Walmart!', reward:'$1000', cta:'Claim Now', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgc_pGoQEmjUZ2BYvWADe8Da02vtshaGo7UGlQJ1rOKY-Q_Wzy2YMWAzItlX4aLm1Osu8M7uyi_EMNomHh0glDinQm17BT-iREXR_A9FTJYsWDtP200weA9oMQnT9cAcKBO5aBYLdB95eDYulcktxOFlMHMaOglEMh_hjgqFissifpzB_H1FGnfZDCc9GEe/s700/25582.jpg', link:'https://www.af9m8trk.com/NP911LPH/T6M12294/?s1=Shadhin'},
       {id:3, title:"McDonald's $100 - (US)", desc:"$100 for Food or Drinks at McDonald's!", reward:'$100', cta:'Grab Gift', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhipdWhIEPRPLVo9wNW0Yh1iOkEK_LtmTxJudbTsWVu_7qZsATr-aGFPBJF-Vm0yHUU7gTWP8VIy7xuMQRRDGq7r__xkOF6_hi4xhem2XWumgNpsnid6E_AG0sucfU108nSl6db7FaVlF1GTz2lCeCKcj-KUUEiufRwixHXLjV54lSBpBAnn0_uhRPb2GNd/s712/27282.jpg', link:'https://www.af9m8trk.com/NP911LPH/UPW123XH/?s1=Shadhin'},
       {id:2, title:'Cash $750 - (US)', desc:'Sign up and receive $750 in your CashApp now!', reward:'$750', cta:'Get Bonus', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg3kdZcBvtTx9eSwQrc3lTP5dxOiFVOOU1JojFvDRg3cyaN7NDZgOoz4oAChpm9QW79QUXPRCIpi0-k8AZKLZAiDktBHmwarSJgitji4tEl34Ah0kXlkQKlpCwod-Ua9hUwnH9q7KDz6ij4QhXMYGquA__XJEQFo3piqKre_gnOZdRDtWCrAMwxX0hAY0to/s1500/GAY5ksbbkAACrDt.jpg', link:'https://www.af9m8trk.com/NP911LPH/W2412MDB/?s1=Shadhin'},
       {id:3, title:'Google Play $100 - (US)', desc:'Sign up and receive $100 on Google Play!', reward:'$100', cta:'Get Reward', img:'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjY2q_jgHPA6tYuTSNleOVeG59Tius0MzTObR0VqD7nd6LCDeUdVZaRTWZO2K0z8uCHok5DHV3JLV42fpGEQj67dKaZ6NZvkFC3uKsFkaWlP6iG4g3Sv6ofZ-TsPJEmha6R9cdWg27SswFx0EAtMAzt4476-owBrj2q-_UC_DUXVvZGfGItpHL7-Fvw4rj8/s650/4420.jpg', link:'https://www.af9m8trk.com/NP911LPH/WE112MD7/?s1=Shadhin'}
@@ -229,6 +229,7 @@
   </script>
 </body>
 </html>
+
 
 
 
